// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider horizontal type renders correctly 1`] = `
<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-horizontal "
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider horizontal type with "color" renders correctly 1`] = `
.c0.rovna-ui-divider {
  border-block-start-color: #0062C9FF;
}

.c0.rovna-ui-divider-vertical {
  border-inline-start-color: #0062C9FF;
}

<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-horizontal c0"
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider horizontal type with custom margin renders correctly 1`] = `
.c0.rovna-ui-divider-horizontal {
  margin: 20px 0;
}

.c0.rovna-ui-divider-vertical {
  margin-inline: 20px;
}

<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-horizontal c0"
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider horizontal type with custom margin renders correctly 2`] = `
.c0.rovna-ui-divider-horizontal {
  margin: 20px;
}

.c0.rovna-ui-divider-vertical {
  margin-inline: 20px;
}

<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-horizontal c0"
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider horizontal type with no margin renders correctly 1`] = `
.c0.rovna-ui-divider-horizontal {
  margin: 0px 0;
}

.c0.rovna-ui-divider-vertical {
  margin-inline: 0px;
}

<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-horizontal c0"
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider horizontal type with no margin renders correctly 2`] = `
.c0.rovna-ui-divider-horizontal {
  margin: 0px;
}

.c0.rovna-ui-divider-vertical {
  margin-inline: 0px;
}

<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-horizontal c0"
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider vertical type renders correctly 1`] = `
<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-vertical "
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider vertical type with "color" renders correctly 1`] = `
.c0.rovna-ui-divider {
  border-block-start-color: #0062C9FF;
}

.c0.rovna-ui-divider-vertical {
  border-inline-start-color: #0062C9FF;
}

<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-vertical c0"
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider vertical type with custom margin renders correctly 1`] = `
.c0.rovna-ui-divider-horizontal {
  margin: 20px 0;
}

.c0.rovna-ui-divider-vertical {
  margin-inline: 20px;
}

<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-vertical c0"
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider vertical type with custom margin renders correctly 2`] = `
.c0.rovna-ui-divider-horizontal {
  margin: 20px;
}

.c0.rovna-ui-divider-vertical {
  margin-inline: 20px;
}

<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-vertical c0"
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider vertical type with no margin renders correctly 1`] = `
.c0.rovna-ui-divider-horizontal {
  margin: 0px 0;
}

.c0.rovna-ui-divider-vertical {
  margin-inline: 0px;
}

<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-vertical c0"
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;

exports[`Divider vertical type with no margin renders correctly 2`] = `
.c0.rovna-ui-divider-horizontal {
  margin: 0px;
}

.c0.rovna-ui-divider-vertical {
  margin-inline: 0px;
}

<div
  className="rovna-ui-divider css-dev-only-do-not-override-u64svk rovna-ui-divider-vertical c0"
  data-testid="rovna-ui-divider"
  role="separator"
  style={{}}
/>
`;
